--- a/.github/workflows/initiate_workflow.yml
+++ b/.github/workflows/initiate_workflow.yml
@@ -19,4 +19,4 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             https://api.github.com/repos/$REPO_B_OWNER/$REPO_B_NAME/dispatches \
-            -d '{"event_type": "trigger_build_deploy", "client_payload": {"branch": "${{ github.ref_name }}"}}'
+            -d '{"event_type": "trigger_build_deploy", "client_payload": {"branch": "${{ github.ref_name }}"}, "repo_name": "DummyProject1"}'
